--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +34,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Version: <module 'numpy.version' from 'C:\\\\Users\\\\Hano\\\\AppData\\\\Local\\\\Packages\\\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\\\LocalCache\\\\local-packages\\\\Python311\\\\site-packages\\\\numpy\\\\version.py'>\n",
+      "{\n",
+      "  \"Compilers\": {\n",
+      "    \"c\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    },\n",
+      "    \"cython\": {\n",
+      "      \"name\": \"cython\",\n",
+      "      \"linker\": \"cython\",\n",
+      "      \"version\": \"3.0.12\",\n",
+      "      \"commands\": \"cython\"\n",
+      "    },\n",
+      "    \"c++\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Machine Information\": {\n",
+      "    \"host\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    },\n",
+      "    \"build\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Build Dependencies\": {\n",
+      "    \"blas\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    },\n",
+      "    \"lapack\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Python Information\": {\n",
+      "    \"path\": \"C:\\\\Users\\\\runneradmin\\\\AppData\\\\Local\\\\Temp\\\\build-env-k51dk6fd\\\\Scripts\\\\python.exe\",\n",
+      "    \"version\": \"3.11\"\n",
+      "  },\n",
+      "  \"SIMD Extensions\": {\n",
+      "    \"baseline\": [\n",
+      "      \"SSE\",\n",
+      "      \"SSE2\",\n",
+      "      \"SSE3\"\n",
+      "    ],\n",
+      "    \"found\": [\n",
+      "      \"SSSE3\",\n",
+      "      \"SSE41\",\n",
+      "      \"POPCNT\",\n",
+      "      \"SSE42\",\n",
+      "      \"AVX\",\n",
+      "      \"F16C\",\n",
+      "      \"FMA3\",\n",
+      "      \"AVX2\"\n",
+      "    ],\n",
+      "    \"not found\": [\n",
+      "      \"AVX512F\",\n",
+      "      \"AVX512CD\",\n",
+      "      \"AVX512_SKX\",\n",
+      "      \"AVX512_CLX\",\n",
+      "      \"AVX512_CNL\",\n",
+      "      \"AVX512_ICL\"\n",
+      "    ]\n",
+      "  }\n",
+      "}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hano\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\__config__.py:155: UserWarning: Install `pyyaml` for better output\n",
+      "  warnings.warn(\"Install `pyyaml` for better output\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"NumPy Version:\", np.version)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +155,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.rand(2, 3, 5)\n"
    ]
   },
   {
@@ -68,11 +172,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.64277583 0.29669636 0.73240605 0.220352   0.19581006]\n",
+      "  [0.72910094 0.09060656 0.47596916 0.50083967 0.83039564]\n",
+      "  [0.62757973 0.72426695 0.43022499 0.94069789 0.65763865]]\n",
+      "\n",
+      " [[0.44048733 0.23848404 0.45730751 0.9156309  0.34792164]\n",
+      "  [0.05818873 0.14378616 0.27851733 0.28245203 0.50091253]\n",
+      "  [0.29710005 0.18026062 0.85662992 0.76198963 0.42432745]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.rand(2, 3, 5)\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +204,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))"
    ]
   },
   {
@@ -102,11 +221,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not equal\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "if len(a) == len(b):\n",
+    "    print(\"is equal\")\n",
+    "\n",
+    "else :\n",
+    "    print(\"not equal\")\n"
    ]
   },
   {
@@ -136,11 +289,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,3,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[60], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m array3 \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mb\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(array3)\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,3,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "array3 = a+b\n",
+    "print(array3)\n",
+    "print(\"i can not  add  a and b becose we dont have the same sheap  \")\n"
    ]
   },
   {
@@ -154,11 +322,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a shape: (2, 3, 5)\n",
+      "Array b shape: (5, 2, 3)\n",
+      "Transposed array c shape: (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "\n",
+    "\n",
+    "c = np.transpose(b, axes=(1, 2, 0))\n",
+    "\n",
+    "\n",
+    "print(\"Array a shape:\", a.shape)\n",
+    "print(\"Array b shape:\", b.shape)\n",
+    "print(\"Transposed array c shape:\", c.shape)\n"
    ]
   },
   {
@@ -171,11 +356,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[2. 2. 2.]\n",
+      "  [2. 2. 2.]\n",
+      "  [2. 2. 2.]]\n",
+      "\n",
+      " [[2. 2. 2.]\n",
+      "  [2. 2. 2.]\n",
+      "  [2. 2. 2.]]\n",
+      "\n",
+      " [[2. 2. 2.]\n",
+      "  [2. 2. 2.]\n",
+      "  [2. 2. 2.]]\n",
+      "\n",
+      " [[2. 2. 2.]\n",
+      "  [2. 2. 2.]\n",
+      "  [2. 2. 2.]]\n",
+      "\n",
+      " [[2. 2. 2.]\n",
+      "  [2. 2. 2.]\n",
+      "  [2. 2. 2.]]]\n",
+      "i can  add  a + c  becose we have the same sheap  \n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "rray3 =np.add(a,c)\n",
+    "print(array3)\n",
+    "print(\"i can  add  a + c  becose we have the same sheap  \")"
    ]
   },
   {
@@ -188,12 +402,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.82307659 0.21964863 0.09134314 0.43025835 0.54870191]\n",
+      "  [0.11656264 0.417652   0.29535733 0.01714874 0.31298977]\n",
+      "  [0.89302856 0.12115005 0.50103552 0.55753699 0.90042431]]\n",
+      "\n",
+      " [[0.06316824 0.94300582 0.6567622  0.56624928 0.02688891]\n",
+      "  [0.64392982 0.79069485 0.49036052 0.89507377 0.02177952]\n",
+      "  [0.18738318 0.00983885 0.66641957 0.57638864 0.74039345]]]\n",
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n",
+      "the difference in the sheap and relation .....\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(b)\n",
+    "print(\"the difference in the sheap and relation .....\")\n"
    ]
   },
   {
@@ -206,11 +450,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.41316076 0.08802873 0.53641862 0.048555   0.03834158]\n",
+      "  [0.53158818 0.00820955 0.22654664 0.25084038 0.68955692]\n",
+      "  [0.39385631 0.52456262 0.18509354 0.88491253 0.43248859]]\n",
+      "\n",
+      " [[0.19402909 0.05687464 0.20913016 0.83837994 0.12104947]\n",
+      "  [0.00338593 0.02067446 0.0775719  0.07977915 0.25091336]\n",
+      "  [0.08826844 0.03249389 0.73381482 0.5806282  0.18005379]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e =np.multiply(a,c)\n",
+    "print(e)\n"
    ]
   },
   {
@@ -224,12 +483,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e it is equal a \n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "e.size == e.size\n",
+    "print(\"e it is equal a \")\n"
    ]
   },
   {
@@ -243,12 +510,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max Value: 300\n",
+      "Min Value: 0\n",
+      "mean value : 77.57142857142857\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d= np.array([2 , 20 , 19 , 199 ,300 ,0 ,3 ])\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "print(\"Max Value:\", d_max)\n",
+    "print(\"Min Value:\", d_min)\n",
+    "print(\"mean value :\" , d_mean)\n"
    ]
   },
   {
@@ -261,11 +543,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.41316076 0.08802873 0.53641862 0.048555   0.03834158]\n",
+      "  [0.53158818 0.00820955 0.22654664 0.25084038 0.68955692]\n",
+      "  [0.39385631 0.52456262 0.18509354 0.88491253 0.43248859]]\n",
+      "\n",
+      " [[0.19402909 0.05687464 0.20913016 0.83837994 0.12104947]\n",
+      "  [0.00338593 0.02067446 0.0775719  0.07977915 0.25091336]\n",
+      "  [0.08826844 0.03249389 0.73381482 0.5806282  0.18005379]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty([2,3,5])\n",
+    "print(f)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -287,11 +586,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 25, 25, 25, 25, 25, 25, 75, 75, 75]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]\n",
+    "f = [0] * len(d)\n",
+    "for i in range(len(d)):\n",
+    "    if d[i] == d_min:\n",
+    "        f[i] = 100\n",
+    "    elif d[i] == d_max:\n",
+    "        f[i] = 0\n",
+    "    elif d[i] == d_mean:\n",
+    "        f[i] = 50\n",
+    "    elif d_min < d[i] < d_mean:\n",
+    "        f[i] = 25\n",
+    "    elif d_mean < d[i] < d_max:\n",
+    "        f[i] = 75\n",
+    "\n",
+    "print(f)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -325,11 +650,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,12 +676,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The bonus value for 'fifty' is: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "bonus__mapping = {\n",
+    "    \"zero\": 0,\n",
+    "    \"twenty_five\": 25,\n",
+    "    \"fifty\": 50,\n",
+    "    \"seventy_five\": 75,\n",
+    "    \"hundred\": 100\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def get_bonus_value(bonus_string):\n",
+    "    return bonus__mapping.get(bonus_string.lower(), \"Invalid bonus value\")\n",
+    "\n",
+    "# Example usage\n",
+    "bonus_string = \"fifty\"\n",
+    "bonus_value = get_bonus_value(bonus_string)\n",
+    "print(f\"The bonus value for '{bonus_string}' is: {bonus_value}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### [your code here]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -374,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
