--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -92,13 +92,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0 0 1 2 0]\n",
-      "  [1 2 1 2 1]\n",
-      "  [0 1 1 2 0]]\n",
+      "[[[2 2 2 0 2]\n",
+      "  [0 1 1 2 1]\n",
+      "  [0 1 0 2 2]]\n",
       "\n",
-      " [[1 1 2 0 2]\n",
-      "  [2 1 2 0 2]\n",
-      "  [1 2 2 2 0]]]\n"
+      " [[0 0 2 0 1]\n",
+      "  [0 0 1 1 0]\n",
+      "  [2 0 2 2 2]]]\n"
      ]
     }
    ],
@@ -276,13 +276,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[1. 1. 2. 3. 1.]\n",
-      "  [2. 3. 2. 3. 2.]\n",
-      "  [1. 2. 2. 3. 1.]]\n",
+      "[[[3. 3. 3. 1. 3.]\n",
+      "  [1. 2. 2. 3. 2.]\n",
+      "  [1. 2. 1. 3. 3.]]\n",
       "\n",
-      " [[2. 2. 3. 1. 3.]\n",
-      "  [3. 2. 3. 1. 3.]\n",
-      "  [2. 3. 3. 3. 1.]]]\n"
+      " [[1. 1. 3. 1. 2.]\n",
+      "  [1. 1. 2. 2. 1.]\n",
+      "  [3. 1. 3. 3. 3.]]]\n"
      ]
     }
    ],
@@ -310,19 +310,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0 0 1 2 0]\n",
-      "  [1 2 1 2 1]\n",
-      "  [0 1 1 2 0]]\n",
+      "[[[2 2 2 0 2]\n",
+      "  [0 1 1 2 1]\n",
+      "  [0 1 0 2 2]]\n",
       "\n",
-      " [[1 1 2 0 2]\n",
-      "  [2 1 2 0 2]\n",
-      "  [1 2 2 2 0]]] [[[1. 1. 2. 3. 1.]\n",
-      "  [2. 3. 2. 3. 2.]\n",
-      "  [1. 2. 2. 3. 1.]]\n",
+      " [[0 0 2 0 1]\n",
+      "  [0 0 1 1 0]\n",
+      "  [2 0 2 2 2]]] [[[3. 3. 3. 1. 3.]\n",
+      "  [1. 2. 2. 3. 2.]\n",
+      "  [1. 2. 1. 3. 3.]]\n",
       "\n",
-      " [[2. 2. 3. 1. 3.]\n",
-      "  [3. 2. 3. 1. 3.]\n",
-      "  [2. 3. 3. 3. 1.]]]\n",
+      " [[1. 1. 3. 1. 2.]\n",
+      "  [1. 1. 2. 2. 1.]\n",
+      "  [3. 1. 3. 3. 3.]]]\n",
       "thay have the same shep and size\n"
      ]
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
      "text": [
       "3.0 \n",
       " 1.0 \n",
-      " 2.1333333333333333\n"
+      " 2.033333333333333\n"
      ]
     }
    ],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,24 +473,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f array:\n",
-      " [[[  0.   0.  25. 100.   0.]\n",
-      "  [ 25. 100.  25. 100.  25.]\n",
-      "  [  0.  25.  25. 100.   0.]]\n",
-      "\n",
-      " [[ 25.  25. 100.   0. 100.]\n",
-      "  [100.  25. 100.   0. 100.]\n",
-      "  [ 25. 100. 100. 100.   0.]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### [your code here]\n",
     "\n",
@@ -506,8 +491,7 @@
     "            elif d_mean < d[i, j, k] < d_max:\n",
     "                f[i, j, k] = 75\n",
     "            elif d[i, j, k] == d_mean:\n",
-    "                f[i, j, k] = 50\n",
-    "print(\"f array:\\n\", f)"
+    "                f[i, j, k] = 50\n"
    ]
   },
   {
@@ -541,24 +525,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m f \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Populate `f` based on conditions\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m d:\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m==\u001b[39m d_min:\n\u001b[0;32m      7\u001b[0m         f\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m0\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f array:\n",
+      " [[[100. 100. 100.   0. 100.]\n",
+      "  [  0.  25.  25. 100.  25.]\n",
+      "  [  0.  25.   0. 100. 100.]]\n",
+      "\n",
+      " [[  0.   0. 100.   0.  25.]\n",
+      "  [  0.   0.  25.  25.   0.]\n",
+      "  [100.   0. 100. 100. 100.]]]\n",
+      " d array:\n",
+      " [[[3. 3. 3. 1. 3.]\n",
+      "  [1. 2. 2. 3. 2.]\n",
+      "  [1. 2. 1. 3. 3.]]\n",
+      "\n",
+      " [[1. 1. 3. 1. 2.]\n",
+      "  [1. 1. 2. 2. 1.]\n",
+      "  [3. 1. 3. 3. 3.]]]\n"
      ]
     }
    ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(\"f array:\\n\", f)\n",
+    "print(\" d array:\\n\", d)"
    ]
   },
   {
