--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy Version: 1.24.3\n",
+      "blas_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "blas_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\include']\n",
+      "blas_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\include']\n",
+      "lapack_armpl_info:\n",
+      "  NOT AVAILABLE\n",
+      "lapack_mkl_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\include']\n",
+      "lapack_opt_info:\n",
+      "    libraries = ['mkl_rt']\n",
+      "    library_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\lib']\n",
+      "    define_macros = [('SCIPY_MKL_H', None), ('HAVE_CBLAS', None)]\n",
+      "    include_dirs = ['C:/Users/HUAWEI/anaconda3\\\\Library\\\\include']\n",
+      "Supported SIMD extensions in this NumPy install:\n",
+      "    baseline = SSE,SSE2,SSE3\n",
+      "    found = SSSE3,SSE41,POPCNT,SSE42,AVX,F16C,FMA3,AVX2\n",
+      "    not found = AVX512F,AVX512CD,AVX512_SKX,AVX512_CLX,AVX512_CNL,AVX512_ICL\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"NumPy Version:\", np.__version__)\n",
+    "\n",
+    "np.show_config()\n"
    ]
   },
   {
@@ -51,11 +91,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 1, 0, 0, 1],\n",
+       "        [0, 2, 2, 2, 1],\n",
+       "        [0, 0, 0, 1, 2]],\n",
+       "\n",
+       "       [[2, 1, 1, 2, 2],\n",
+       "        [0, 1, 2, 1, 2],\n",
+       "        [0, 2, 2, 0, 2]]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.randint(3, size=(2, 3, 5))\n",
+    "a\n"
    ]
   },
   {
@@ -68,11 +127,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 1 0 0 1]\n",
+      "  [0 2 2 2 1]\n",
+      "  [0 0 0 1 2]]\n",
+      "\n",
+      " [[2 1 1 2 2]\n",
+      "  [0 1 2 1 2]\n",
+      "  [0 2 2 0 2]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2,3))\n"
    ]
   },
   {
@@ -102,11 +177,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +216,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "# yes have the same size \n",
+    "\n",
+    "\n",
+    "if a.size == b.size:\n",
+    "    print(True)\n",
+    "else:\n",
+    "    print(False)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -136,11 +253,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[50], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m add_arr\u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m+\u001b[39mb\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "add_arr= a+b\n",
+    "\n",
+    "#no i can'not because they don't have the same shapes\n"
    ]
   },
   {
@@ -154,11 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c= np.transpose(b, (1, 2, 0))  # Change (5,2,3) → (2,3,5)\n"
    ]
   },
   {
@@ -171,11 +304,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 2. 1. 1. 2.]\n",
+      "  [1. 3. 3. 3. 2.]\n",
+      "  [1. 1. 1. 2. 3.]]\n",
+      "\n",
+      " [[3. 2. 2. 3. 3.]\n",
+      "  [1. 2. 3. 2. 3.]\n",
+      "  [1. 3. 3. 1. 3.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c\n",
+    "print(d)"
    ]
   },
   {
@@ -188,11 +337,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 1 0 0 1]\n",
+      "  [0 2 2 2 1]\n",
+      "  [0 0 0 1 2]]\n",
+      "\n",
+      " [[2 1 1 2 2]\n",
+      "  [0 1 2 1 2]\n",
+      "  [0 2 2 0 2]]]\n",
+      "[[[1. 2. 1. 1. 2.]\n",
+      "  [1. 3. 3. 3. 2.]\n",
+      "  [1. 1. 1. 2. 3.]]\n",
+      "\n",
+      " [[3. 2. 2. 3. 3.]\n",
+      "  [1. 2. 3. 2. 3.]\n",
+      "  [1. 3. 3. 1. 3.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "print(a)\n",
+    "print(d)\n",
     "\n"
    ]
   },
@@ -206,11 +378,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0., 1., 0., 0., 1.],\n",
+       "        [0., 2., 2., 2., 1.],\n",
+       "        [0., 0., 0., 1., 2.]],\n",
+       "\n",
+       "       [[2., 1., 1., 2., 2.],\n",
+       "        [0., 1., 2., 1., 2.],\n",
+       "        [0., 2., 2., 0., 2.]]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a*c\n",
+    "e\n"
    ]
   },
   {
@@ -224,11 +415,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 1, 0, 0, 1],\n",
+       "        [0, 2, 2, 2, 1],\n",
+       "        [0, 0, 0, 1, 2]],\n",
+       "\n",
+       "       [[2, 1, 1, 2, 2],\n",
+       "        [0, 1, 2, 1, 2],\n",
+       "        [0, 2, 2, 0, 2]]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "# yes it is \n",
     "\n"
    ]
   },
@@ -243,11 +452,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "1.0\n",
+      "2.066666666666667\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "d_max= np.max(d)\n",
+    "d_min= np.min(d)\n",
+    "d_mean= np.mean(d)\n",
+    "\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -261,11 +489,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[  0.,  25.,   0.,   0.,  25.],\n",
+       "        [  0., 100., 100., 100.,  25.],\n",
+       "        [  0.,   0.,   0.,  25., 100.]],\n",
+       "\n",
+       "       [[100.,  25.,  25., 100., 100.],\n",
+       "        [  0.,  25., 100.,  25., 100.],\n",
+       "        [  0., 100., 100.,   0., 100.]]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f= np.empty([2,3,5])\n",
+    "f\n"
    ]
   },
   {
@@ -287,11 +534,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[  0.  25.   0.   0.  25.]\n",
+      "  [  0. 100. 100. 100.  25.]\n",
+      "  [  0.   0.   0.  25. 100.]]\n",
+      "\n",
+      " [[100.  25.  25. 100. 100.]\n",
+      "  [  0.  25. 100.  25. 100.]\n",
+      "  [  0. 100. 100.   0. 100.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "f = np.empty_like(d)\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range(d.shape[0]): \n",
+    "    for j in range(d.shape[1]):  \n",
+    "        for k in range(d.shape[2]):  \n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "\n",
+    "# Print f to verify the result\n",
+    "print(f)\n",
+    "\n"
    ]
   },
   {
@@ -325,11 +608,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 2. 1. 1. 2.]\n",
+      "  [1. 3. 3. 3. 2.]\n",
+      "  [1. 1. 1. 2. 3.]]\n",
+      "\n",
+      " [[3. 2. 2. 3. 3.]\n",
+      "  [1. 2. 3. 2. 3.]\n",
+      "  [1. 3. 3. 1. 3.]]]\n",
+      "[[[  0.  25.   0.   0.  25.]\n",
+      "  [  0. 100. 100. 100.  25.]\n",
+      "  [  0.   0.   0.  25. 100.]]\n",
+      "\n",
+      " [[100.  25.  25. 100. 100.]\n",
+      "  [  0.  25. 100.  25. 100.]\n",
+      "  [  0. 100. 100.   0. 100.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f)\n"
    ]
   },
   {
@@ -360,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
