--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "print(np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.rand(2,3,5)"
    ]
   },
   {
@@ -68,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "print(a)"
    ]
   },
   {
@@ -85,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "print(b)"
    ]
   },
   {
@@ -119,11 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "print(a.size)  \n",
+    "print(b.size)\n",
+    "\n",
+    "sizeCompare= (a.size) == (b.size) \n",
+    "print(sizeCompare)\n",
+    "# Yes they are the same size 30"
    ]
   },
   {
@@ -136,11 +142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a + b \n",
+    "\n",
+    "# Shapes are different\n",
+    "\n",
+    "# Works If:\n",
+    "# Shapes are identical → Example: (3,4) and (3,4) → Works!\n",
+    "# One of the dimensions is 1 → Example: (3,4) and (1,4) → Works! (The 1 expands)\n",
+    "# One of the arrays is 1D and fits the last dimension → Example: (3,4) and (4,) → Works!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(a.shape == b.shape)"
    ]
   },
   {
@@ -154,11 +176,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "c = b.transpose(1,2,0)\n",
+    "\n",
+    "\n",
+    "# b = ((5,2,3))\n",
+    "# In transponse we select axis 0,1,2 \n",
+    "# Since it wants 2,3,5, from 5,2,3, it should be 1,2,0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(c)"
    ]
   },
   {
@@ -171,11 +207,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "d = a+c # It works now because a size == c size"
    ]
   },
   {
@@ -188,12 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print (\"the a array: \\n\", a)\n",
+    "print(\"\\n\")\n",
+    "print (\"the d array: \\n\", d)\n",
+    "\n",
+    "# Each value in d is 1 more than the corresponding value in a"
    ]
   },
   {
@@ -206,11 +245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "e = a * c"
    ]
   },
   {
@@ -224,11 +263,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n",
+    "np.array_equal(e, a)  # Yes, same size\n",
     "\n"
    ]
   },
@@ -243,12 +282,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max = d.max()\n",
+    "d_min = d.min()\n",
+    "d_mean = d.mean()\n",
+    "\n",
+    "print(d_max)\n",
+    "print(d_min)\n",
+    "print(d_mean)"
    ]
   },
   {
@@ -261,11 +305,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "f= np.empty(d.shape)"
    ]
   },
   {
@@ -275,23 +319,49 @@
     "\n",
     "\n",
     "\n",
-    "### 16. Populate the values in f. For each value in d, if it's larger than d_min but smaller than d_mean, assign 25 to the corresponding value in f.\n",
-    "If a value in d is larger than d_mean but smaller than d_max, assign 75 to the corresponding value in f.\n",
-    "If a value equals to d_mean, assign 50 to the corresponding value in f.\n",
-    "Assign 0 to the corresponding value(s) in f for d_min in d.\n",
-    "Assign 100 to the corresponding value(s) in f for d_max in d.\n",
-    "In the end, f should have only the following values: 0, 25, 50, 75, and 100.\n",
+    "### 16. Populate the values in f. \n",
+    "\n",
+    "- For each value in d, if it's larger than d_min but smaller than d_mean, assign 25 to the corresponding value in f.\n",
+    "\n",
+    "- If a value in d is larger than d_mean but smaller than d_max, assign 75 to the corresponding value in f.\n",
+    "\n",
+    "- If a value equals to d_mean, assign 50 to the corresponding value in f.\n",
+    "\n",
+    "- Assign 0 to the corresponding value(s) in f for d_min in d.\n",
+    "\n",
+    "- Assign 100 to the corresponding value(s) in f for d_max in d.\n",
+    "\n",
+    "- In the end, f should have only the following values: 0, 25, 50, 75, and 100.\n",
+    "\n",
     "Note: you don't have to use Numpy in this question.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "# f[d > d_mean] = 75\n",
+    "\n",
+    "# f[d == d_mean] = 50\n",
+    "\n",
+    "# f[d == d_min] = 0\n",
+    "\n",
+    "# f[d == d_max] = 100\n",
+    "\n",
+    "# f[(d > d_min) & (d < d_mean)] = 25\n",
+    "\n",
+    "f[d == d_min] = 0\n",
+    "\n",
+    "f[(d > d_min) & (d < d_mean)] = 25\n",
+    "\n",
+    "f[d == d_mean] = 50\n",
+    "\n",
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "\n",
+    "f[d == d_max] = 100\n"
    ]
   },
   {
@@ -325,11 +395,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "print (\"the a array: \\n\", d)\n",
+    "print(\"\\n\")\n",
+    "print (\"the d array: \\n\", f)"
    ]
   },
   {
@@ -350,11 +422,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['D' 'D' 'D' 'D' 'B']\n",
+      "  ['B' 'D' 'B' 'B' 'D']\n",
+      "  ['D' 'D' 'B' 'D' 'B']]\n",
+      "\n",
+      " [['E' 'B' 'B' 'D' 'B']\n",
+      "  ['B' 'D' 'B' 'D' 'D']\n",
+      "  ['B' 'A' 'D' 'D' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "f_str = np.empty(d.shape, dtype=str)\n",
+    "\n",
+    "\n",
+    "f_str[d == d_min] = \"A\"\n",
+    "\n",
+    "f_str[(d > d_min) & (d < d_mean)] = \"B\"\n",
+    "\n",
+    "f_str[d == d_mean] = \"C\"\n",
+    "\n",
+    "f_str[(d > d_mean) & (d < d_max)] = \"D\"\n",
+    "\n",
+    "f_str[d == d_max] = \"E\"\n",
+    "\n",
+    "print(f_str)\n"
    ]
   }
  ],
@@ -374,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
