feat: exercise done

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.3\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.version.version)"
    ]
   },
   {
@@ -51,11 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2,3,5)\n"
    ]
   },
   {
@@ -68,11 +79,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[4.18393659e-01 2.85984838e-03 6.22533349e-01 4.32660275e-01\n",
+      "   5.87120073e-04]\n",
+      "  [4.66406478e-01 8.07543923e-01 6.13431483e-01 9.61480692e-01\n",
+      "   4.07938445e-01]\n",
+      "  [2.57908204e-01 9.08136809e-01 9.40719151e-01 4.83622616e-02\n",
+      "   8.91798266e-01]]\n",
+      "\n",
+      " [[3.96153616e-02 1.79412611e-01 9.29625569e-01 8.45109125e-01\n",
+      "   4.83687836e-01]\n",
+      "  [5.89874329e-01 7.44889119e-01 6.75560498e-01 4.39685321e-01\n",
+      "   1.18359962e-01]\n",
+      "  [9.30009726e-01 1.95242495e-01 4.92265590e-01 4.73709925e-01\n",
+      "   6.65144810e-01]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5,3,2))"
    ]
   },
   {
@@ -102,11 +135,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "They arrays have different sizes\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "if a.shape == b.shape:\n",
+    "    print(\"The arrays have the same size\")\n",
+    "else:\n",
+    "    print(\"They arrays have different sizes\")"
    ]
   },
   {
@@ -136,11 +208,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,3,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo, as attempted above the 2 arrays cant be added cause of theyr different size\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,3,2) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "result = a + b\n",
+    "print(result)\n",
+    "\"No, as attempted above the 2 arrays cant be added cause of theyr different size\""
    ]
   },
   {
@@ -154,11 +241,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = b.reshape(2,3,5)"
    ]
   },
   {
@@ -171,11 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c\n",
+    "\"Now it works cause they have the same shape\""
    ]
   },
   {
@@ -188,12 +278,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[4.18393659e-01 2.85984838e-03 6.22533349e-01 4.32660275e-01\n",
+      "   5.87120073e-04]\n",
+      "  [4.66406478e-01 8.07543923e-01 6.13431483e-01 9.61480692e-01\n",
+      "   4.07938445e-01]\n",
+      "  [2.57908204e-01 9.08136809e-01 9.40719151e-01 4.83622616e-02\n",
+      "   8.91798266e-01]]\n",
+      "\n",
+      " [[3.96153616e-02 1.79412611e-01 9.29625569e-01 8.45109125e-01\n",
+      "   4.83687836e-01]\n",
+      "  [5.89874329e-01 7.44889119e-01 6.75560498e-01 4.39685321e-01\n",
+      "   1.18359962e-01]\n",
+      "  [9.30009726e-01 1.95242495e-01 4.92265590e-01 4.73709925e-01\n",
+      "   6.65144810e-01]]]\n",
+      "[[[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]\n",
+      "\n",
+      " [[1. 1.]\n",
+      "  [1. 1.]\n",
+      "  [1. 1.]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'the shape are oposite (5x3x2) compared to (2x3x5), one has random generated values and the other has only 1s'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(b)\n",
+    "\n",
+    "\"the shape are oposite (5x3x2) compared to (2x3x5), one has random generated values and the other has only 1s\"\n"
    ]
   },
   {
@@ -206,11 +348,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c"
    ]
   },
   {
@@ -224,12 +367,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, the 2 arrays are equal \n",
+      "Because e is a multiplyed by 1\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "if np.array_equal(e, a):\n",
+    "    print (\"Yes, the 2 arrays are equal \\nBecause e is a multiplyed by 1\")\n",
+    "else:\n",
+    "    print(\"No, the arrays are different\")\n"
    ]
   },
   {
@@ -243,12 +398,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n"
    ]
   },
   {
@@ -261,11 +418,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty((2,3,5))"
    ]
   },
   {
@@ -287,11 +445,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100"
    ]
   },
   {
@@ -325,11 +496,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.41839366 1.00285985 1.62253335 1.43266028 1.00058712]\n",
+      "  [1.46640648 1.80754392 1.61343148 1.96148069 1.40793844]\n",
+      "  [1.2579082  1.90813681 1.94071915 1.04836226 1.89179827]]\n",
+      "\n",
+      " [[1.03961536 1.17941261 1.92962557 1.84510913 1.48368784]\n",
+      "  [1.58987433 1.74488912 1.6755605  1.43968532 1.11835996]\n",
+      "  [1.93000973 1.19524249 1.49226559 1.47370992 1.66514481]]]\n",
+      "[[[ 25.  25.  75.  25.   0.]\n",
+      "  [ 25.  75.  75. 100.  25.]\n",
+      "  [ 25.  75.  75.  25.  75.]]\n",
+      "\n",
+      " [[ 25.  25.  75.  75.  25.]\n",
+      "  [ 75.  75.  75.  25.  25.]\n",
+      "  [ 75.  25.  25.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,11 +544,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['B' 'B' 'D' 'B' 'A']\n",
+      "  ['B' 'D' 'D' 'E' 'B']\n",
+      "  ['B' 'D' 'D' 'B' 'D']]\n",
+      "\n",
+      " [['B' 'B' 'D' 'D' 'B']\n",
+      "  ['D' 'D' 'D' 'B' 'B']\n",
+      "  ['D' 'B' 'B' 'B' 'D']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "f = np.empty_like(d, dtype='<U1')\n",
+    "\n",
+    "for i in range(2):\n",
+    "    for j in range(3):\n",
+    "        for k in range(5):\n",
+    "            if d[i][j][k] == d_min:\n",
+    "                f[i][j][k] = 'A'\n",
+    "            elif d_min < d[i][j][k] < d_mean:\n",
+    "                f[i][j][k] = 'B'\n",
+    "            elif d[i][j][k] == d_mean:\n",
+    "                f[i][j][k] = 'C'\n",
+    "            elif d_mean < d[i][j][k] < d_max:\n",
+    "                f[i][j][k] = 'D'\n",
+    "            elif d[i][j][k] == d_max:\n",
+    "                f[i][j][k] = 'E'\n",
+    "            \n",
+    "print(f)"
    ]
   }
  ],
@@ -374,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
